# bazel_play

./: BUILD.bazel  WORKSPACE.bazel
app1/: .eslintrc.js  BUILD.bazel  index.js  package-lock.json  package.json
